Fix scroll overflow
Didn’t need that after all, since I added a padding-bottom afterwards

--- a/src/app/style/Footer.sass
+++ b/src/app/style/Footer.sass
@@ -8,7 +8,6 @@ html, body, #app
 .container
   position: relative
   min-height: 100%
-  overflow: hidden // So the children margins do not leak
   padding-bottom: $footerHeight
 
 // And now the footer, which is inside the .container
